argo-projects/argo-events/resources/argo-events-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-events
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
