argo-projects/argo-events/resources/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-eventsource
  labels:
    app.kubernetes.io/instance: argo-events-webhook
    app.kubernetes.io/part-of: argo-events
spec:
  ports:
  - port: 12000
    protocol: TCP
    targetPort: 12000
  selector:
    eventsource-name: webhook
  type: NodePort
