argo-projects/argo-events/resources/webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-ingress
  namespace: argo-events
spec:
  ingressClassName: nginx
  rules:
  - host: webhook.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: webhook-eventsource
            port:
              number: 12001
        path: /
        pathType: Prefix
